--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calc</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
       function insert(num) {
         document.form.textview.value = document.form.textview.value + num;
@@ -40,9 +39,7 @@
       }
     </script>
     <style>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-        * {
+      * {
         margin: 0;
         padding: 0;
       }
@@ -87,14 +84,24 @@
       <table>
         <tr>
           <td>
-            <input class="button" type="button" value="C" onclick="clr()" />
-          </td>
-          <td>
-            <input class="button" type="button" value="<" onclick="back()" />
+            <input
+              class="waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="C"
+              onclick="clr()"
+            />
           </td>
           <td>
             <input
-              class="button"
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="<"
+              onclick="back()"
+            />
+          </td>
+          <td>
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
               type="button"
               value="/"
               onclick="insert('/')"
@@ -102,7 +109,7 @@
           </td>
           <td>
             <input
-              class="button"
+              class="button waves-effect waves-light btn-flat btn-large"
               type="button"
               value="+"
               onclick="insert('+')"
@@ -111,17 +118,32 @@
         </tr>
         <tr>
           <td>
-            <input class="button" type="button" value="9" onclick="insert(9)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="8" onclick="insert(8)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="7" onclick="insert(7)" />
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="9"
+              onclick="insert(9)"
+            />
           </td>
           <td>
             <input
-              class="button"
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="8"
+              onclick="insert(8)"
+            />
+          </td>
+          <td>
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="7"
+              onclick="insert(7)"
+            />
+          </td>
+          <td>
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
               type="button"
               value="-"
               onclick="insert('-')"
@@ -130,17 +152,32 @@
         </tr>
         <tr>
           <td>
-            <input class="button" type="button" value="6" onclick="insert(6)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="5" onclick="insert(5)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="4" onclick="insert(4)" />
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="6"
+              onclick="insert(6)"
+            />
           </td>
           <td>
             <input
-              class="button"
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="5"
+              onclick="insert(5)"
+            />
+          </td>
+          <td>
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="4"
+              onclick="insert(4)"
+            />
+          </td>
+          <td>
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
               type="button"
               value="*"
               onclick="insert('*')"
@@ -149,18 +186,33 @@
         </tr>
         <tr>
           <td>
-            <input class="button" type="button" value="3" onclick="insert(3)" />
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="3"
+              onclick="insert(3)"
+            />
           </td>
           <td>
-            <input class="button" type="button" value="2" onclick="insert(2)" />
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="2"
+              onclick="insert(2)"
+            />
           </td>
           <td>
-            <input class="button" type="button" value="1" onclick="insert(1)" />
+            <input
+              class="button waves-effect waves-light btn-flat btn-large"
+              type="button"
+              value="1"
+              onclick="insert(1)"
+            />
           </td>
           <td rowspan="5">
             <input
               style="height: 85px; background-color: lightsalmon; border: none;"
-              class="button"
+              class="button waves-effect waves-light btn-flat btn-large"
               type="button"
               value="="
               onclick="equal()"
@@ -171,7 +223,7 @@
           <td colspan="2">
             <input
               style="width: 105px;"
-              class="button"
+              class="button waves-effect waves-light btn-flat btn-large"
               type="button"
               value="0"
               onclick="insert(0)"
@@ -180,7 +232,7 @@
 
           <td>
             <input
-              class="button"
+              class="button waves-effect waves-light btn-flat btn-large"
               type="button"
               value="."
               onclick="insert('.')"
